MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Line__c/Booking_Fee_Line__c.object-meta.xml
<CustomObject>
    <description>Booking fee line per selected unit on an Opportunity, holding the ADM and Dari fee and the Down Payment amount to be collected, with a payment status.</description>
    <label>Booking Fee Line</label>
    <nameField>
        <displayFormat>BFL-{00000}</displayFormat>
        <label>Booking Fee Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Fee Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>