MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Line__c/fields/ADM_Dari_Fee__c.field-meta.xml
<CustomField>
    <fullName>ADM_Dari_Fee__c</fullName>
    <label>ADM and Dari Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>