MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Line__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <formula>ROUND(Total_Amount__c  ,2) - ROUND(Total_Paid_Amount__c ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>