MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Line__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>