MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Line__c/fields/Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Fee_Status__c</fullName>
    <formula>if(Total_Amount__c -  Total_Paid_Amount__c &lt;= 0, &apos;Paid&apos;,
if(Total_Amount__c - Total_Paid_Amount__c == Total_Amount__c,&apos;Generated&apos;,
if(Total_Amount__c - Total_Paid_Amount__c &gt; 0, &apos;Partially Paid&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Status</label>
    <type>Text</type>
</CustomField>