MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Line__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Booking Fee Lines</relationshipLabel>
    <relationshipName>Booking_Fee_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>