MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Line__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>ADM Received</fullName>
            </value>
            <value>
                <fullName>Down Payment Received</fullName>
            </value>
            <value>
                <fullName>Fully Received</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>