MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Line__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <label>Total Paid Amount</label>
    <summarizedField>Booking_Fee_Allocation__c.Allocation_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Fee_Allocation__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Fee_Allocation__c.Booking_Fee_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>