MODON MRE BPDEV/force-app/main/default/objects/Booking_Fee_Line__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Booking Fee Lines</relationshipLabel>
    <relationshipName>Booking_Fee_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>